--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "daemon": "^1.1.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
